--- a/src/app/employees-grid/employees-grid.component.html
+++ b/src/app/employees-grid/employees-grid.component.html
@@ -1,67 +1,35 @@
-<kendo-grid [kendoGridBinding]="gridView" kendoGridSelectBy="id" [selectedKeys]="mySelection" [pageSize]="20"
-    [pageable]="true" [sortable]="true" [groupable]="true" [reorderable]="true" [resizable]="true" [height]="480"
-    [columnMenu]="{ filter: true }">
-    <ng-template kendoGridToolbarTemplate>
-        <input placeholder="Search in all columns..." kendoTextBox (input)="onFilter($event.target.value)" />
-        <button kendoGridExcelCommand type="button" icon="file-excel" style="float:right;">Export to Excel</button>
-        <button kendoGridPDFCommand icon="file-pdf" style="float:right;">Export to PDF</button>
-    </ng-template>
-    <kendo-grid-checkbox-column [width]="45" [headerClass]="{'text-center': true}" [class]="{'text-center': true}"
-        [resizable]="false" [columnMenu]="false" showSelectAll="true"></kendo-grid-checkbox-column>
-    <kendo-grid-column-group title="Employee" [columnMenu]="false">
-        <kendo-grid-column field="full_name" title="Contact Name" [width]="220">
-            <ng-template kendoGridCellTemplate let-dataItem>
-                <div class="customer-photo" [ngStyle]="{'background-image' : photoURL(dataItem)}"></div>
-                <div class="customer-name">{{ dataItem.full_name }}</div>
-            </ng-template>
-        </kendo-grid-column>
-        <kendo-grid-column field="job_title" title="Job Title" [width]="220">
-        </kendo-grid-column>
-        <kendo-grid-column field="country" title="Country" [width]="100" [class]="{'text-center': true}"
-            [resizable]="false">
-            <ng-template kendoGridCellTemplate let-dataItem>
-                <img class="flag" [src]="flagURL(dataItem)" width="30">
-            </ng-template>
-        </kendo-grid-column>
-        <kendo-grid-column field="is_online" title="Status" [width]="100" [class]="{'text-center': true}"
-            [resizable]="false" filter="boolean">
-            <ng-template kendoGridCellTemplate let-dataItem>
-                <span *ngIf="dataItem.is_online === true" class="badge badge-success">Online</span>
-                <span *ngIf="dataItem.is_online === false" class="badge badge-danger">Offline</span>
-            </ng-template>
-        </kendo-grid-column>
-    </kendo-grid-column-group>
-    <kendo-grid-column-group title="Performance" [columnMenu]="false">
-        <kendo-grid-column field="rating" title="Rating" [width]="110" [resizable]="false" filter="numeric">
-            <!-- <ng-template kendoGridCellTemplate let-dataItem>
-                <kendo-rating [value]="dataItem.rating" [max]="5"></kendo-rating>
-            </ng-template> -->
-        </kendo-grid-column>
-        <!-- <kendo-grid-column field="target" title="Engagement" [width]="230" [resizable]="false" filter="numeric">
-            <ng-template kendoGridCellTemplate let-dataItem>
-                <kendo-sparkline type="bar" [data]="dataItem.target" [tooltip]="{visible: false}" [transitions]="true"
-                    [seriesDefaults]="{labels: {background: 'none', visible: true, format: '{0}%'}}">
-                    <kendo-chart-area opacity="0" [width]="200"></kendo-chart-area>
-                    <kendo-chart-value-axis>
-                        <kendo-chart-value-axis-item [min]="0" [max]="130">
-                        </kendo-chart-value-axis-item>
-                    </kendo-chart-value-axis>
-                </kendo-sparkline>
-            </ng-template>
-        </kendo-grid-column> -->
-        <kendo-grid-column field="budget" title="Budget" [width]="100" filter="numeric">
-            <ng-template kendoGridCellTemplate let-dataItem>
-                <span [ngClass]="{'red text-bold': dataItem.budget < 0}">{{ dataItem.budget | currency }}</span>
-            </ng-template>
-        </kendo-grid-column>
-    </kendo-grid-column-group>
-    <kendo-grid-column-group title="Contacts" [columnMenu]="false">
-        <kendo-grid-column field="phone" title="Phone" [width]="130">
-        </kendo-grid-column>
-        <kendo-grid-column field="address" title="Address" [width]="200">
-        </kendo-grid-column>
-    </kendo-grid-column-group>
 
-    <!-- <kendo-grid-pdf fileName="Employees.pdf" [repeatHeaders]="true"></kendo-grid-pdf>
-    <kendo-grid-excel fileName="Employees.xlsx"></kendo-grid-excel> -->
+
+<div style="margin-bottom: 10px">
+    <div class="card">
+        <div class="card-block k-form">
+            <fieldset style="margin: 10px">
+              <legend>View types</legend>
+              <div class="k-form-field">
+                  <span style="padding-right: 10px">View:</span>
+                  <input [(ngModel)]="bindingType" type="radio" name="mode" id="array" value="all" class="k-radio"
+                  (change)="changeBindingType($event)" >
+                  <label class="k-radio-label" for="array">All</label>
+                  <input [(ngModel)]="bindingType" type="radio" name="mode" id="gridDataResult" value="only2" class="k-radio"
+                  (change)="changeBindingType($event)">
+                  <label class="k-radio-label" for="gridDataResult">Only2</label>
+                  <input [(ngModel)]="bindingType" type="radio" name="mode" id="async" value="only3" class="k-radio"
+                  (change)="changeBindingType($event)">
+                  <label class="k-radio-label" for="async">Only3</label>
+              </div>
+            </fieldset>
+        </div>
+    </div>
+  </div>
+<kendo-grid
+    [data]="gridView"
+    [height]="530"
+    [sortable]="{
+        allowUnsort: allowUnsort,
+        mode: multiple ? 'multiple' : 'single'
+    }"
+    [sort]="sort"
+    (sortChange)="sortChange($event)"
+>
+    <kendo-grid-column *ngFor="let col of columns" [field]="col.field"></kendo-grid-column>
 </kendo-grid>
