--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,12 @@
 <kendo-tabstrip>
-    <kendo-tabstrip-tab [title]="'Tab 1'">
+    <kendo-tabstrip-tab [title]="'Tab 1'" [selected]="true">
       <ng-template kendoTabContent>
         <app-employees-grid></app-employees-grid>
       </ng-template>
     </kendo-tabstrip-tab>
-    <kendo-tabstrip-tab [title]="'Tab 2'" [selected]="true">
+    <kendo-tabstrip-tab [title]="'Tab 2'" >
       <ng-template kendoTabContent>
-        <p>Tab 2 Content</p>
-      </ng-template>
-    </kendo-tabstrip-tab>
-    <kendo-tabstrip-tab [title]="'Tab 3'">
-      <ng-template kendoTabContent>
-        <p>Tab 3 Content</p>
+        <app-views-grid></app-views-grid>
       </ng-template>
     </kendo-tabstrip-tab>
   </kendo-tabstrip>
