--- a/src/app/employees-grid/employees-grid.component.html
+++ b/src/app/employees-grid/employees-grid.component.html
@@ -7,7 +7,7 @@
               <legend>View types</legend>
               <div class="k-form-field">
               <kendo-dropdownlist
-              [data]="listItems"
+              [data]="boxViews"
               textField="name"
               valueField="id"
               [(ngModel)]="bindingType"
