--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <kendo-tabstrip>
     <kendo-tabstrip-tab [title]="'Tab 1'" [selected]="true">
       <ng-template kendoTabContent>
-        <app-employees-grid></app-employees-grid>
+        <app-employees-grid [views] = 'views' [data] = 'products'></app-employees-grid>
       </ng-template>
     </kendo-tabstrip-tab>
     <kendo-tabstrip-tab [title]="'Tab 2'" >
       <ng-template kendoTabContent>
-        <app-views-grid></app-views-grid>
+        <app-views-grid [views] = 'views'></app-views-grid>
       </ng-template>
     </kendo-tabstrip-tab>
   </kendo-tabstrip>
