--- a/src/app/components/edit-form/edit-form.component.html
+++ b/src/app/components/edit-form/edit-form.component.html
@@ -29,8 +29,8 @@
             <ng-template kendoGridEditTemplate let-dataItem="dataItem">
                 <!-- <input [(ngModel)]="dataItem.hidden" formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox"/> -->
                 <input formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox" [(ngModel)]="hiddenCheck"/>
-                <div class="alert  alert-danger" *ngIf="hiddenCheck">
-                    Age should be in between 20 to 500 years
+                <div class="alert  alert-danger" *ngIf=" form.get('hidden')?.errors?.hiddenValue ">
+                    false
                 </div>
             </ng-template>
         </kendo-grid-column>
@@ -57,7 +57,7 @@
           <kendo-grid-command-column title="command" [width]="150">
               <ng-template kendoGridCellTemplate let-isNew="isNew" style="text-align: center;">
                   <button kendoGridEditCommand type="button" [primary]="true">Edit</button>
-                  <button kendoGridSaveCommand type="button" [disabled]="form?.invalid" >Update</button>
+                  <button kendoGridSaveCommand type="button" >Update</button>
                   <button kendoGridCancelCommand type="button">{{ isNew ? 'Discard changes' : 'Cancel' }}</button>
               </ng-template>
           </kendo-grid-command-column>
