--- a/src/app/components/edit-form/edit-form.component.html
+++ b/src/app/components/edit-form/edit-form.component.html
@@ -14,7 +14,7 @@
           <ng-template kendoGridToolbarTemplate>
               <button kendoGridAddCommand type="button">Add new</button>
           </ng-template>
-          <kendo-grid-column field="field" title="field">
+          <kendo-grid-column  field="field" title="field">
            
         </kendo-grid-column>
           <kendo-grid-column field="title" title="title">
@@ -28,7 +28,7 @@
           <kendo-grid-column field="hidden" editor="boolean" title="hidden">
             <ng-template kendoGridEditTemplate let-dataItem="dataItem">
                 <!-- <input [(ngModel)]="dataItem.hidden" formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox"/> -->
-                <input formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox" [(ngModel)]="hiddenCheck"/>
+                <input formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox" />
                 <div class="alert  alert-danger" *ngIf=" form.get('hidden')?.errors?.hiddenValue ">
                     false
                 </div>
@@ -37,7 +37,7 @@
         <kendo-grid-column field="locked" editor="boolean" title="locked">
             <ng-template kendoGridEditTemplate let-dataItem="dataItem">
                 <!-- <input [(ngModel)]="dataItem.locked" formControlName="locked" kendoGridFocusable name="locked" type="checkbox"/> -->
-                <input formControlName="locked" kendoGridFocusable name="locked" type="checkbox" [(ngModel)]="lockedCheck"/>
+                <input formControlName="locked" kendoGridFocusable name="locked" type="checkbox" />
             </ng-template>
         </kendo-grid-column>
           <kendo-grid-column field="width" editor="numeric" title="width">
@@ -45,19 +45,19 @@
                   <!-- <input [(ngModel)]="dataItem.width"  formControlName="width" kendoGridFocusable name="width" class="k-textbox" type="number"/> -->
                   <input  formControlName="width" kendoGridFocusable name="width" class="k-textbox" type="number"/>
                   <div class="alert  alert-danger" *ngIf="form.get('width')?.dirty && form.get('width')?.errors&& form.get('width')?.errors?.ageRange ">
-                    Age should be in between 20 to 500 years
+                    value should be in between 20 to 200
                 </div>
               </ng-template>
           </kendo-grid-column>
-          <kendo-grid-column field="order" editor="numeric" title="order">
+          <!-- <kendo-grid-column field="order" editor="numeric" title="order">
             <ng-template kendoGridEditTemplate let-dataItem="dataItem">
-                <!-- <input [(ngModel)]="dataItem.order" kendoGridFocusable name="order" class="k-textbox" type="number"/> -->
+                <input [(ngModel)]="dataItem.order" kendoGridFocusable name="order" class="k-textbox" type="number"/>
             </ng-template>
-        </kendo-grid-column>
+        </kendo-grid-column> -->
           <kendo-grid-command-column title="command" [width]="150">
               <ng-template kendoGridCellTemplate let-isNew="isNew" style="text-align: center;">
                   <button kendoGridEditCommand type="button" [primary]="true">Edit</button>
-                  <button kendoGridSaveCommand type="button" >Update</button>
+                  <button kendoGridSaveCommand [disabled]="form.invalid" type="button" >Update</button>
                   <button kendoGridCancelCommand type="button">{{ isNew ? 'Discard changes' : 'Cancel' }}</button>
               </ng-template>
           </kendo-grid-command-column>
