--- a/src/app/components/edit-form/edit-form.component.html
+++ b/src/app/components/edit-form/edit-form.component.html
@@ -1,66 +1,68 @@
-<kendo-dialog  (close)="closeForm()">
+<kendo-dialog (close)="closeForm()">
     <kendo-dialog-titlebar>
-        {{ isNew ? 'Add new product' : 'Edit product' }}
+        Edit columns
     </kendo-dialog-titlebar>
     <form novalidate #myForm="ngForm" [formGroup]="form">
-        <kendo-grid
-            [data]="gridData"
-            [pageable]="true" [sortable]="true"
-            (edit)="editHandler($event)" 
-            (save)="saveHandler($event)" 
-            (cancel)="cancelHandler($event)"
-            [navigable]="true"
-          >
-          <ng-template kendoGridToolbarTemplate>
-              <button kendoGridAddCommand type="button">Add new</button>
-          </ng-template>
-          <kendo-grid-column  field="field" title="field">
-           
-        </kendo-grid-column>
-          <kendo-grid-column field="title" title="title">
-              <ng-template kendoGridEditTemplate let-dataItem="dataItem">
-                  <input  kendoGridFocusable formControlName="title" name="title" class="k-textbox" required/>
-                  <div class="alert  alert-danger" *ngIf="form.get('title')?.dirty && form.get('title')?.errors ">
-                    Age
-                </div>
-              </ng-template>
-          </kendo-grid-column>
-          <kendo-grid-column field="hidden" editor="boolean" title="hidden">
-            <ng-template kendoGridEditTemplate let-dataItem="dataItem">
-                <!-- <input [(ngModel)]="dataItem.hidden" formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox"/> -->
-                <input formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox" />
-                <div class="alert  alert-danger" *ngIf=" form.get('hidden')?.errors?.hiddenValue ">
-                    false
-                </div>
-            </ng-template>
-        </kendo-grid-column>
-        <kendo-grid-column field="locked" editor="boolean" title="locked">
-            <ng-template kendoGridEditTemplate let-dataItem="dataItem">
-                <!-- <input [(ngModel)]="dataItem.locked" formControlName="locked" kendoGridFocusable name="locked" type="checkbox"/> -->
-                <input formControlName="locked" kendoGridFocusable name="locked" type="checkbox" />
-            </ng-template>
-        </kendo-grid-column>
-          <kendo-grid-column field="width" editor="numeric" title="width">
-              <ng-template kendoGridEditTemplate let-dataItem="dataItem">
-                  <!-- <input [(ngModel)]="dataItem.width"  formControlName="width" kendoGridFocusable name="width" class="k-textbox" type="number"/> -->
-                  <input  formControlName="width" kendoGridFocusable name="width" class="k-textbox" type="number"/>
-                  <div class="alert  alert-danger" *ngIf="form.get('width')?.dirty && form.get('width')?.errors&& form.get('width')?.errors?.ageRange ">
-                    value should be in between 20 to 200
-                </div>
-              </ng-template>
-          </kendo-grid-column>
-          <!-- <kendo-grid-column field="order" editor="numeric" title="order">
-            <ng-template kendoGridEditTemplate let-dataItem="dataItem">
-                <input [(ngModel)]="dataItem.order" kendoGridFocusable name="order" class="k-textbox" type="number"/>
-            </ng-template>
-        </kendo-grid-column> -->
-          <kendo-grid-command-column title="command" [width]="150">
-              <ng-template kendoGridCellTemplate let-isNew="isNew" style="text-align: center;">
-                  <button kendoGridEditCommand type="button" [primary]="true">Edit</button>
-                  <button kendoGridSaveCommand [disabled]="form.invalid" type="button" >Update</button>
-                  <button kendoGridCancelCommand type="button">{{ isNew ? 'Discard changes' : 'Cancel' }}</button>
-              </ng-template>
-          </kendo-grid-command-column>
+        <kendo-grid [data]="gridData" (edit)="editHandler($event)"
+            (save)="saveHandler($event)" (cancel)="cancelHandler($event)" [navigable]="true">
+            <kendo-grid-column field="field" title="field">
+
+            </kendo-grid-column>
+            <kendo-grid-column field="title" title="title">
+                <ng-template kendoGridEditTemplate let-dataItem="dataItem">
+                    <input kendoGridFocusable formControlName="title" name="title" class="k-textbox" required />
+                    <div class="alert  alert-danger" *ngIf="form.get('title')?.dirty && form.get('title')?.errors ">
+                        Age
+                    </div>
+                </ng-template>
+            </kendo-grid-column>
+            <kendo-grid-column field="hidden" editor="boolean" title="hidden">
+                <ng-template kendoGridCellTemplate let-dataItem>
+                    <span *ngIf="dataItem.hidden;else other_content" class="k-icon k-i-check"></span>
+                    <ng-template #other_content>
+                        <span class="k-icon k-i-close"></span>
+                    </ng-template>
+                </ng-template>
+                <ng-template kendoGridEditTemplate let-dataItem="dataItem">
+                    <input formControlName="hidden" kendoGridFocusable name="hidden" type="checkbox" />
+                    <div class="alert  alert-danger" *ngIf=" form.get('hidden')?.errors?.hiddenValue ">
+                        false
+                    </div>
+                </ng-template>
+            </kendo-grid-column>
+            <kendo-grid-column field="locked" editor="boolean" title="locked">
+                <ng-template kendoGridCellTemplate let-dataItem>
+                    <span *ngIf="dataItem.locked;else other_content" class="k-icon k-i-check"></span>
+                    <ng-template #other_content>
+                        <span class="k-icon k-i-close"></span>
+                    </ng-template>
+                </ng-template>
+                <ng-template kendoGridEditTemplate let-dataItem="dataItem">
+                    <input formControlName="locked" kendoGridFocusable name="locked" type="checkbox" />
+                </ng-template>
+            </kendo-grid-column>
+            <kendo-grid-column field="width" editor="numeric" title="width">
+                <ng-template kendoGridEditTemplate let-dataItem="dataItem">
+                    <input formControlName="width" kendoGridFocusable name="width" class="k-textbox" type="number" />
+                    <div class="alert  alert-danger"
+                        *ngIf="form.get('width')?.dirty && form.get('width')?.errors&& form.get('width')?.errors?.ageRange ">
+                        value should be in between 20 to 200
+                    </div>
+                </ng-template>
+            </kendo-grid-column>
+            <kendo-grid-command-column title="command" [width]="200">
+                <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
+                    <button kendoGridEditCommand type="button" [primary]="true">Edit</button>
+                    <button kendoGridSaveCommand [disabled]="form.invalid" type="button">Update</button>
+                    <button kendoGridCancelCommand type="button">Cancel</button>
+                    <button kendoButton *ngIf="rowIndex != 0" [look]="'clear'" (click)="upHandler(dataItem)">
+                        <span class="k-icon k-i-sort-asc-sm"></span>
+                    </button>
+                    <button kendoButton *ngIf="rowIndex != gridData.length-1" [look]="'clear'" (click)="downHandler(dataItem)">
+                        <span class="k-icon k-i-sort-desc-sm"></span>
+                    </button>
+                </ng-template>
+            </kendo-grid-command-column>
         </kendo-grid>
     </form>
 
