--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,22 @@
 <kendo-tabstrip>
-    <kendo-tabstrip-tab [title]="'Data'" [selected]="true">
+    <!-- <kendo-tabstrip-tab [title]="'Data'" [selected]="true">
       <ng-template kendoTabContent>
-        <app-employees-grid [views] = 'views' [data] = 'products'></app-employees-grid>
+        <app-employees-grid [views]='views' [data]='products'></app-employees-grid>
       </ng-template>
     </kendo-tabstrip-tab>
     <kendo-tabstrip-tab [title]="'Views'" >
       <ng-template kendoTabContent>
-        <app-views-grid [views] = 'views'></app-views-grid>
+        <app-views-grid [views]='views'></app-views-grid>
+      </ng-template>
+    </kendo-tabstrip-tab> -->
+    <kendo-tabstrip-tab [title]="'Data'" [selected]="true">
+      <ng-template kendoTabContent>
+        <app-employees-grid [views]='employeeView' [data]='employees'></app-employees-grid>
+      </ng-template>
+    </kendo-tabstrip-tab> -->
+    <kendo-tabstrip-tab [title]="'Views'" >
+      <ng-template kendoTabContent>
+        <app-views-grid [views]='employeeView' [Column]='employees'></app-views-grid>
       </ng-template>
     </kendo-tabstrip-tab>
   </kendo-tabstrip>
