--- a/src/app/components/employees-grid/employees-grid.component.html
+++ b/src/app/components/employees-grid/employees-grid.component.html
@@ -27,7 +27,7 @@
     [skip]="skip"
     [sortable]="{
         allowUnsort: allowUnsort,
-        mode: multiple ? 'multiple' : 'single'
+        mode: 'multiple'
     }"
     [sort]="sort"
     (sortChange)="sortChange($event)"
